--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -1,13 +1,22 @@
+<html>
+
+<head>
+    <link rel="stylesheet" href="../public/stylesheets/footer.css"> <!-- temporary, until server routes are implemented, will be updated-->
+</head>
+
 <footer>
-    <img src="/images/logo.png" alt="s.a.n.d logo">
-    <p>&copy;S.A.N.D Copyright.</p>
-    <a href="/terms">Terms And Conditions.</a>
+    <img src="../public/images/nft.png" alt="s.a.n.d logo"  id='logo'>
+    <p class='copyright'>&copy; S.A.N.D Copyright.</p>
+    <a href="/terms">Terms And Conditions.</a> 
     <a href="/privacy">Privacy Policy</a>
-    <div id='social'>
-        <ul>
-            <li><a href="facebook"><img src="/images/fb.png" alt="facebook logo"></a></li>
-            <li><a href="twitter"><img src="/images/twitter.png" alt="twitter logo"></a></li>
-            <li><a href="instagram"><img src="/images/instagram.png" alt="instagram logo"></a></li>
-        </ul>
+    </p>
+    <div class="social">
+
+        <a href="facebook"><img src="../public/images/facebook.png" alt="facebook logo"></a> 
+        <a href="twitter"><img src="../public/images/twitter.png" alt="twitter logo"></a> 
+        <a href="instagram"><img src="../public/images/instagram.png" alt="instagram logo"></a>
     </div>
 </footer>
+
+
+</html>
