Added missing button images. Repositioned and resized header and navbar elements to match UI mockup. Improved light/dark switch. Added wallet connected/disconnected indicator. Added current page indicator. Added underline animation when hovering on a navbar link

--- a/src/views/navbar.ejs
+++ b/src/views/navbar.ejs
@@ -1,34 +1,32 @@
-<nav id="navbar">
-    <ul>
-        <li><a href="/">
-            <div class="nav-icon" id="home"></div>
-            <h1>Home</h1>
-        </a></li>
+<ul>
+    <li class="current"><a class="underline_animation" href="/">
+        <div class="nav-icon" id="home"></div>
+        <h1>Home</h1>
+    </a></li>
 
-        <li><a href="/exchange">
-            <div class="nav-icon" id="exchange"></div>
-            <h1>Exchange</h1>
-        </a></li>
+    <li><a class="underline_animation" href="/exchange">
+        <div class="nav-icon" id="exchange"></div>
+        <h1 class="underline_animation">Exchange</h1>
+    </a></li>
 
-        <li><a href="/follow">
-            <div class="nav-icon" id="follow"></div>
-            <h1>Follow</h1>
-        </a></li>
+    <li><a class="underline_animation" href="/follow">
+        <div class="nav-icon" id="follow"></div>
+        <h1>Follow</h1>
+    </a></li>
 
-        <li><a href="/friends">
-            <div class="nav-icon" id="friendlist"></div>
-            <h1>Friendlist</h1>
-        </a></li>
+    <li><a class="underline_animation" href="/friends">
+        <div class="nav-icon" id="friendlist"></div>
+        <h1>Friendlist</h1>
+    </a></li>
 
-        <li><a href="/rooms">
-            <div class="nav-icon" id="rooms"></div>
-            <h1>Rooms</h1>
-        </a></li>
-    </ul>
+    <li><a class="underline_animation" href="/rooms">
+        <div class="nav-icon" id="rooms"></div>
+        <h1>Rooms</h1>
+    </a></li>
+</ul>
 
-    <section id="options">
-        <button class="nav-icon" id="minmax"></button>
-        <button class="nav-icon" id="currency"></button>
-        <button class="nav-icon" id="options"></button>
-    </section>
-</nav>
+<section id="options">
+    <button class="grow_hover nav-icon" id="minmax"></button>
+    <button class="grow_hover nav-icon" id="currency"></button>
+    <button class="nav-icon grow_hover" id="settings"></button>
+</section>
