--- a/src/views/header.ejs
+++ b/src/views/header.ejs
@@ -1,23 +1,22 @@
-<header id="header">
+<section id="title">
+    <img id="logo" src="images/sand.jpg" alt="logo">
+    <h1>S.A.N.D</h1>
+</section>
 
-    <section id="title">
-        <img id="logo" src="images/sand.jpg" alt="logo">
-        <h1>S.A.N.D</h1>
-    </section>
+<section id="buttons">
+    <div id="darkmode">
+        <label class="switch">
+            <input type="checkbox">
+            <span class="slider"></span>
+        </label>
+    </div>
 
-    <section id="buttons">
-        <div id="darkmode">
-            <div class="header-icon" id="light"></div>
-            <label class="switch">
-                <input type="checkbox">
-                <span class="slider"></span>
-            </label>
-            <div class="header-icon" id="dark"></div>
-        </div>
-
-        <button class="header-icon" id="wallet"></button>
-        <button class="header-icon" id="user"></button>
-        
-    </section>
-
-</header>
+    <div id="user_buttons">
+        <section id="wallet">
+            <div class="header-icon" id="connected_indicator"></div>
+            <button class="grow_hover header-icon" id="wallet"></button>
+        </section>
+        <button class="grow_hover header-icon" id="user"></button>
+    </div>
+    
+</section>
