--- a/src/views/aside.html
+++ b/src/views/aside.html
@@ -1,6 +1,37 @@
 <head>
-    <link rel="stylesheet" href="../public/stylesheets/footer.css"> <!-- temporary, until server routes are implemented, will be updated-->
+    <link rel="stylesheet" href="aside.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
 </head>
 <aside>
-    <button> <img src="../public/images/chat.png" id="chat"></button>
+    <!--- <button> <img src="../public/images/chat.png" id="chat"></button> -->
+    <div class="container">
+        <div class="msg-header">
+        <div class="msg-header-img">
+         <img src="../public/images/user2.png">   
+        </div>  
+        <div class="active"> 
+            <h4>Joe Gold</h4>
+            <h6> 3 hours ago...</h6>       
+        </div>
+        <div class="chat-page">
+            <div class="msg-inbox">
+                <div class="chats">
+                 <div class="msg-page">
+                     <div class="received-chats">
+                         <div class="received-chats-img">
+                             <img src="user2.png">
+                         </div>
+                         <div class="received-msg">
+                             <div class="received-msg-inbox"></div>
+                             <p> Hi!! This message is from Joe Gold </p>
+
+                         </div>
+                     </div>
+                 </div>   
+                </div>
+            </div>
+
+        </div>
+    </div>
 </aside>
