--- a/src/views/aside.css
+++ b/src/views/aside.css
@@ -1,3 +1,12 @@
+
+*
+{
+    margin: 0px;
+    padding:0px;
+
+}
+
+
 .container 
 {
     max-width: 500px !important;
@@ -54,3 +63,107 @@ background-color: #007bff;
     color: #fff;
 }
 
+.chat-page
+{
+    padding: 0 0 50px 0;
+}
+.msg-inbox 
+{
+    border: 1px solid #ccc;
+    overflow: hidden;
+    padding-bottom: 30px;
+}
+.chats 
+{
+    padding: 30px 15px 0 25px;
+}
+.msg-page 
+{
+    height: 516px;
+    overflow-y: auto;
+}
+.received-chats-img 
+{
+    display: inline-block;
+    width: 20px;
+    float: left;
+}
+.received-msg
+{
+    display: inline-block;
+    padding: 0 0 0 10px;
+    vertical-align: top;
+    width: 92%;
+}
+.received-msg-inbox 
+{
+    width: 57%;
+}
+.received-msg-inbox p
+{
+    background: #efefef none scroll 0 0;
+    border-radius: 10px;
+    color: #646464;
+    font-size: 14px;
+    padding: 5px 10px 5px 12px;
+    width: 100%;
+}
+.time 
+{
+    color: #777;
+    display: block;
+    font-size: 12px;
+    margin: 8px 0 0;
+}
+.outgoing-chats
+{
+    overflow: hidden ;
+    margin: 26px 20px;
+
+}
+.outgoing-chats-msg p
+{
+    background: #007bff none repeat scroll 0 0;
+    color: #fff;
+    border-radius: 10px;
+    font-size: 14px;
+    margin: 0;
+    color: #fff;
+    padding: 5px 10px 5px 12px;
+    width: 100%;
+
+}
+.outgoing-chats-msg
+{
+    float: left;
+    width: 46%;
+    margin-left: 45%;
+}
+.outgoing-chats-img
+{
+    display: inline-block;
+    width: 20px;
+    float: right;
+
+}
+.msg-bottom
+{
+    position: relative;
+    height: 100%;
+    background-color: #007bff;
+}
+.input-group
+{
+    float: right;
+    margin-top: 13px;
+    margin-right: 20px;
+    outline: none !important;
+    border-radius: 20px;
+    width: 61% !important;
+    background-color: #fff;
+
+}
+.form-control
+{
+    border: none !important;
+}
