--- a/src/views/aside.html
+++ b/src/views/aside.html
@@ -15,21 +15,90 @@
             <h6> 3 hours ago...</h6>       
         </div>
         <div class="chat-page">
-            <div class="msg-inbox">
-                <div class="chats">
-                 <div class="msg-page">
-                     <div class="received-chats">
-                         <div class="received-chats-img">
-                             <img src="user2.png">
-                         </div>
-                         <div class="received-msg">
-                             <div class="received-msg-inbox"></div>
-                             <p> Hi!! This message is from Joe Gold </p>
+        <div class="msg-inbox">
+        <div class="chats">
+        <div class="msg-page">
 
-                         </div>
-                     </div>
-                 </div>   
+        <div class="received-chats">
+        <div class="received-chats-img">
+        <img src="../public/images/user2.png">
+        </div>
+        <div class="received-msg">
+        <div class="received-msg-inbox">
+        <p> Hey you! This message is from Joe Gold </p>
+         <span class="time"> 11:01 PM | November 11</span>
+
+        </div>
+        </div>
+        </div>  
+        
+        <div class="outgoing-chats">
+            <div class="outgoing-chats-msg">
+            
+            <p> Hi!! This message is from me </p>
+             <span class="time"> 11:01 PM | November 11</span>
+             
+            </div>
+            </div>
+            <div class="outgoing-chats-img">
+            <img src="../public/images/user1.png">
+            </div>
+            </div>  
+
+            <div class="received-chats">
+                <div class="received-chats-img">
+                <img src="../public/images/user2.png">
                 </div>
+                <div class="received-msg">
+                <div class="received-msg-inbox">
+                <p> Are you flirting with me? This is the 2nd message from Joe Gold </p>
+                 <span class="time"> 11:01 PM | November 11</span>
+        
+                </div>
+                </div>
+                </div>  
+                
+                <div class="outgoing-chats">
+                    <div class="outgoing-chats-msg">
+                    
+                    <p> I just wanna learn about NFTs man. Gee why you making this weird? This is the 2nd message from me </p>
+                     <span class="time"> 11:02 PM | November 11</span>
+                     
+                    </div>
+                    </div>
+                    <div class="outgoing-chats-img">
+                    <img src="../public/images/user1.png">
+                    </div>
+                    </div>  
+                    <div class="received-chats">
+                        <div class="received-chats-img">
+                        <img src="../public/images/user2.png">
+                        </div>
+                        <div class="received-msg">
+                        <div class="received-msg-inbox">
+                        <p> I will track you down, find you and teach you everything you need to know about NFTs!! </p>
+                         <span class="time"> 11:03 PM | November 11</span>
+                
+                        </div>
+                        </div>
+                        </div>  
+
+
+
+
+
+                        
+
+                   </div>     
+                </div>
+            </div>
+            <div class="msg-bottom">
+            <div class="input-group">
+            <input type="text" class="form-control" placeholder="write message...">
+            <div class="input-group-append">
+            <span class="input-group-text"></span>
+            </div>
+
             </div>
 
         </div>
