completed user authentication and extended with login routes

--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -9,7 +9,7 @@
             <input type="text" name="username">
             <label for="password">Password:</label>
             <input type="password" name="password">
-            <input type="button" value="Login">
+            <input type="submit" value="Login">
         </form>
     </body>
 
