--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -12,7 +12,7 @@
             <input type="text" name="email">
             <label for="password">Password:</label>
             <input type="password" name="password">
-            <input type="button" value="Signup">
+            <input type="submit" value="Signup">
         </form>
     </body>
 
