--- a/src/public/stylesheets/navbar.css
+++ b/src/public/stylesheets/navbar.css
@@ -1,6 +1,6 @@
 #navbar {
     max-width: 250px;
-    min-height: 700px;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -15,6 +15,7 @@
     padding: 10px 20px;
     margin: 15px 0px;
 }
+
 
 /* Underline Current Page (li class="current") */
 
@@ -65,7 +66,8 @@
 }
 
 #navbar>#options {
-    margin: 35px 10px 20px 10px; /* t r b l */
+    margin: 35px 10px 20px 10px;
+    /* t r b l */
     display: flex;
     justify-content: space-evenly;
 }
@@ -73,6 +75,33 @@
 #navbar>#options .nav-icon {
     width: 50px;
     height: 50px;
+}
+
+
+/* Hover Underline Animation 
+   Will make h1 inside parent w/ class get underlined */
+
+.underline_animation h1 {
+    display: inline-block;
+    position: relative;
+}
+
+.underline_animation h1::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: black;
+    transform-origin: bottom center;
+    transition: transform 0.25s ease-out;
+}
+
+.underline_animation:hover h1::after {
+    transform: scaleX(1);
+    transform-origin: bottom center;
 }
 
 
@@ -96,6 +125,10 @@
 
 .nav-icon#rooms {
     background-image: url("/images/rooms.svg");
+}
+
+.nav-icon#discover {
+    background-image: url("/images/discover.svg");
 }
 
 .nav-icon#minmax {
