Seperated signup routes from login, and added logout

--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -5,7 +5,7 @@
 
     <body>
         <!-- temporary action until the users route will be implemented -->
-        <form method="POST" action="/login/signup" enctype="multipart/form-data"> 
+        <form method="POST" action="/signup" enctype="multipart/form-data"> 
             <label for="username">Username:</label>
             <input type="text" name="username">
             <label for="email">Email:</label>
