--- a/src/public/stylesheets/header.css
+++ b/src/public/stylesheets/header.css
@@ -1,6 +1,12 @@
 #header {
+    width: 100%;
+    grid-area: header;
     display: flex;
     justify-content: space-between;
+    position: sticky;
+    top: 0px;
+    z-index: 10;
+    background-color: white;
 }
 
 #header>section {
