--- a/src/views/navbar.ejs
+++ b/src/views/navbar.ejs
@@ -1,13 +1,13 @@
-<ul>
-
-    <% pages.forEach( p => { %>
-        <%- include('navbar_item', {p}); %>
-    <% }); %>
-
-</ul>
-
-<section id="options">
-    <button class="grow_hover nav-icon" id="currency"></button>
-    <button class="nav-icon grow_hover" id="settings"></button>
-    <button class="grow_hover nav-icon" id="minmax"></button>
-</section>
+<div id="nav_buttons">
+    <ul>
+        <% pages.forEach( p => { %>
+            <%- include('includes/navbar_item', {p}); %>
+        <% }); %>
+    </ul>
+    
+    <section id="options">
+        <button class="grow_hover nav-icon" id="currency"></button>
+        <button class="nav-icon grow_hover" id="settings"></button>
+        <button class="grow_hover nav-icon" id="minmax"></button>
+    </section>
+</div>
