--- a/src/views/aside.html
+++ b/src/views/aside.html
@@ -29,7 +29,7 @@
                             </div>
                             <div class="received-msg">
                                 <div class="received-msg-inbox">
-                                    <p> Hey you! This message is from Joe Gold </p>
+                                    <p> Hey you! </p>
                                     <span class="time"> 11:01 PM | November 11</span>
 
                                 </div>
@@ -39,7 +39,7 @@
                         <div class="outgoing-chats">
                             <div class="outgoing-chats-msg">
 
-                                <p> Hi!! This message is from me </p>
+                                <p> Hi!!</p>
                                 <span class="time"> 11:01 PM | November 11</span>
 
                             </div>
@@ -55,7 +55,7 @@
                         </div>
                         <div class="received-msg">
                             <div class="received-msg-inbox">
-                                <p> Are you flirting with me? This is the 2nd message from Joe Gold </p>
+                                <p> Are you flirting with me?  </p>
                                 <span class="time"> 11:01 PM | November 11</span>
 
                             </div>
@@ -65,8 +65,7 @@
                     <div class="outgoing-chats">
                         <div class="outgoing-chats-msg">
 
-                            <p> I just wanna learn about NFTs man. Gee why you making this weird? This is the 2nd
-                                message from me </p>
+                            <p> I just wanna learn about NFTs man. Gee why you making this weird?  </p>
                             <span class="time"> 11:02 PM | November 11</span>
 
                         </div>
