--- a/src/public/stylesheets/follow.css
+++ b/src/public/stylesheets/follow.css
@@ -1,65 +1,89 @@
 section.follow {
-    background-color: mediumpurple;
-    margin: 15px;
-    padding: 50px 30px;
-    min-width: 400px;
-    max-width: 900px;
+    background-color: rgb(141, 137, 156);
     border-radius: 15px;
-    box-shadow: 24px 24px 80px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    min-width: 350px;
+    max-width: 900px;
+    width: 75%;
+    margin: 20px 15px 0px 15px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto 70px;
+    grid-template-areas: "top-info" "buttons";
 }
 
 
 /* Top Section */
 
 section#top {
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-evenly;
-    padding: 5px;
-    gap: 20px;
-}
-
-section#top>#info {
-    padding: 20px;
-    background-color: gainsboro;
-    width: 95%;
-}
-
-section#top>#info>h1 {
-    font-size: 2.2em;
-}
-
-section#top>#info>#desc {
+    grid-area: top-info;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: "img info";
+    background-color: #f0f0f0;
     height: 100%;
-    margin-top: 20px;
-    padding: 15px;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 10px 10px -10px;
 }
 
-section#top #desc > h2 {
-    font-size: 1.8em;
+section#top > #img {
+    grid-area: img;
+    display: flex;
+    flex-direction: column;
 }
 
-section#top #desc > p {
-    font-size: 1.8em;
+section#top > #img > div {
+    height: 100%;
+    overflow: hidden;
+    display: flex;
 }
 
-section#top>img {
+section#top > #img img {
     width: 100%;
-    max-height: 410px;
-    object-fit: contain;
+    align-self: center;
 }
 
+section#top > #info {
+    grid-area: info;
+    display: flex;
+    flex-direction: column;
+}
 
-/* Responsive behaviour */
+section#top > #info > div {
+    margin: 15px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
-@media (min-width:400px) and (max-width:1100px) {
-    section#top {
-        flex-direction: column;
-        align-items: center;
+section#top > #info h1 {
+    font-size: 2.2em;
+    text-align: center;
+    max-width: 300px;
+}
+
+section#top > #info #desc {
+    padding: 15px;
+    height: fit-content;
+}
+
+@media screen and (max-width:1200px) {
+
+    section.follow {
+        align-self: flex-start;
+        margin: 50px 0px;
     }
 
-    section#top > #info > h1 {
-        text-align: center;
+    section#top {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr auto;
+        grid-template-areas: "img" "info";
+    }
+
+    section#top #info h1 {
+        margin-top: 15px;
     }
 }
 
@@ -67,15 +91,19 @@ section#top>img {
 /* Buttons */
 
 .follow>section#buttons {
-    background-color: green;
-    margin-top: 15px;
+    grid-area: buttons;
+    width: 100%;
+    justify-self: center;
     display: flex;
-    justify-content: space-evenly;
     align-items: center;
+    justify-content: space-evenly
 }
 
 .follow>section#buttons button {
-    color: white !important;
-    border-radius: 10px;
-    background-color: blue;
+    background-color: #f0f0f0;
+    font-weight: bolder;
+    min-width: 80px;
+    padding: 0px 20px;
+    height: 35px;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
