--- a/src/public/stylesheets/header.css
+++ b/src/public/stylesheets/header.css
@@ -5,7 +5,7 @@
     justify-content: space-between;
     position: sticky;
     top: 0px;
-    z-index: 10;
+    z-index: 15 !important;
     background-color: white;
 }
 
