--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -20,7 +20,7 @@
 
     <!-- Minimize navbar by adding: class="minimized" -->
     <nav id="navbar">
-      <% let pages = ["home", "exchange", "discover", "follow", "friendlist", "rooms"] %>
+      <% let pages = ["home", "exchange", "discover", "followed", "friendlist", "rooms"] %>
       <%- include('navbar', {pages:pages}); %>
     </nav>
 
