--- a/src/views/includes/navbar.ejs
+++ b/src/views/includes/navbar.ejs
@@ -1,5 +1,5 @@
 <nav id="navbar">
-    <% let pages=["home", "exchange" , "discover" , "followed" , "friendlist" , "rooms" ]; %>
+    <% let pages=["home", "exchange" , "discover" , "follow" , "friendlist" , "rooms" ]; %>
 
         <div id="nav_buttons">
             <ul>
