--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-  <%- include('./includes/head') %>
+  <%- include('./includes/head', { title: 'S.A.N.D'}) %>
 
   <body>
 
@@ -13,10 +13,40 @@
 
     <main>
       <!-- Uncomment (one at a time!) to test different main views-->
-      <%- include('discover') %>
+      <!-- TODO add dashboard here -->
+  
       
       <% let obj = {"title": "You wouldn't right click an NFT", "img": "/images/irony.jpg", "value": 69420} %>
-      <%- include('follow', obj) %>
+      <section class="follow">
+
+        <section id="top">
+            <section id="info">
+                <div>
+                    <h1>
+                        <%= obj.title %>
+                    </h1>
+                    <section id="desc">
+                        <h2>Info:</h2>
+                        <p>This NFT is classified as '<%= obj.title %>' NFT Art.
+                                It's current value in the market is <%= obj.value %> CHF.
+                                    Market value expected to increase.</p>
+                    </section>
+                </div>
+            </section>
+            <section id="img">
+                <div>
+                    <img src="<%= obj.img %>" alt="<%= obj.title %>">
+                </div>
+            </section>
+        </section>
+    
+        <section id="buttons">
+            <button class="grow_hover">Add +</button>
+            <button class="grow_hover">Track</button>
+            <button class="grow_hover">Notify Me</button>
+        </section>
+      </section>
+    
     </main>
 
     <aside id="aside"></aside>
