--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -6,10 +6,14 @@
     <body>
         <form method="POST" action="/login" enctype="multipart/form-data">
             <label for="username">Username:</label>
-            <input type="text" name="username">
+            <input type="text" name="username" required>
             <label for="password">Password:</label>
-            <input type="password" name="password">
+            <input type="password" name="password" required>
             <input type="submit" value="Login">
+            
+        </form>
+        <form method="GET" action="/signup">
+            <input type="submit" value="Signup">
         </form>
     </body>
 
