--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -1,19 +1,38 @@
 <html>
-    <head>
-        <title><%= title %></title>
-    </head>
 
-    <body>
-        <!-- temporary action until the users route will be implemented -->
-        <form method="POST" action="/signup" enctype="multipart/form-data"> 
-            <label for="username">Username:</label>
-            <input type="text" name="username">
-            <label for="email">Email:</label>
-            <input type="text" name="email">
-            <label for="password">Password:</label>
-            <input type="password" name="password">
-            <input type="submit" value="Signup">
-        </form>
-    </body>
+<head>
+    <title>
+        <%= title %>
+    </title>
+</head>
+
+<body>
+    
+    <form method="POST" action="/signup" enctype="multipart/form-data">
+        <label for="username">Username:</label>
+        <input type="text" name="username" required>
+
+        <label for="name">Name:</label>
+        <input type="text" name="name" required>
+
+        <label for="surname">Surname:</label>
+        <input type="text" name="surname" required>
+
+        <label for="email">Email:</label>
+        <input type="email" name="email" required>
+
+        <label for="password">Password:</label>
+        <input type="password" name="password" required>
+
+        <label for="retype_password">Retype Password:</label>
+        <input type="password" name="retype_password" required>
+
+        <input type="submit" value="Signup">
+    </form>
+
+    <form method="GET" action="/login">
+        <input type="submit" value="Login">
+    </form>
+</body>
 
 </html>
