Fleshed out friendlist_item.ejs. Improved look of friendlist.

--- a/src/public/stylesheets/follow.css
+++ b/src/public/stylesheets/follow.css
@@ -96,7 +96,7 @@ section#top > #info #desc {
     justify-self: center;
     display: flex;
     align-items: center;
-    justify-content: space-evenly
+    justify-content: space-evenly;
 }
 
 .follow>section#buttons button {
