--- a/src/views/includes/friendlist_item.ejs
+++ b/src/views/includes/friendlist_item.ejs
@@ -1,3 +1,12 @@
-<section class="friend">
-    <h1 id="name"><%= name %></h1>
-</section>
+<li class="friend">
+    <section class="shadow" id="info">
+        <div id="avatar"></div>
+        <h1 id="name"><%= name %></h1>
+        <p>Lorem ipsum dolor sit amet.</p>
+    </section>
+    <div id="buttons">
+        <button class="grow_hover" id="profile">See Profile</button>
+        <button class="grow_hover" id="message">Meesage</button>
+        <button class="grow_hover" id="unfriend">Unfriend</button>
+    </div>
+</li>
