Fixed conflict in index ejs

--- a/src/views/includes/head.ejs
+++ b/src/views/includes/head.ejs
@@ -7,4 +7,5 @@
     <link rel='stylesheet' href='/stylesheets/navbar_min.css' />
     <link rel='stylesheet' href='/stylesheets/discover.css' />
     <link rel='stylesheet' href='/stylesheets/follow.css' />
+    <link rel='stylesheet' href='/stylesheets/friendlist.css' />
 </head>
