Integrated route with server

--- a/src/views/includes/friendlist_item.ejs
+++ b/src/views/includes/friendlist_item.ejs
@@ -6,7 +6,7 @@
     </section>
     <div id="buttons">
         <button class="grow_hover" id="profile">See Profile</button>
-        <button class="grow_hover" id="message">Meesage</button>
+        <button class="grow_hover" id="message">Message</button>
         <button class="grow_hover" id="unfriend">Unfriend</button>
     </div>
 </li>
