--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -13,12 +13,27 @@
     <main>
       <!-- Uncomment (one at a time!) to test different main views-->
       <!-- TODO add dashboard here -->
-  
-      
-      <% let obj = {"title": "You wouldn't right click an NFT", "img": "/images/irony.jpg", "value": 69420} %>
-      <% /* - include('follow', obj) */ %>
+
+      <section id="friendlist">
+
+        <section class="page" id="your_friends">
+            <h1>Your friends</h1>
+            <ul>
+                <% for(let i=1; i < 6; i++) { %>
+                    <% let friend={name: "Friend Number " + i} %>
+                    <%- include('includes/friendlist_item', friend) %>
+                <% }; %>
+            </ul>
+        </section>
     
-      <%- include('friendlist') %>
+        <section id="bookmarks">
+            <% for(let i=0; i < 9; i++) { %>
+                <% let style = 'grid-area: ' + (1 + 2*i) + ' / 1 / ' + (4 + 2*i) + ' / 2' %>
+                <div style="<%= style %>" id="bm<%=i%>" class="bookmark"></div>
+            <% }; %>
+        </section>
+    
+    </section>
     
     </main>
 
