Added footer and aside-closed

--- a/src/views/discover.ejs
+++ b/src/views/discover.ejs
@@ -48,9 +48,9 @@
     
     </main>
 
-    <aside id="aside"></aside>
+    <%- include('./includes/aside_closed'); %>
 
-    <footer id="footer"></footer>
+    <%- include('./includes/footer'); %>
 
   </body>
 </html>
