--- a/src/views/follow.ejs
+++ b/src/views/follow.ejs
@@ -47,9 +47,9 @@
             </section>
     </main>
 
-    <aside id="aside"></aside>
+    <%- include('./includes/aside_closed'); %>
 
-    <footer id="footer"></footer>
+    <%- include('./includes/footer'); %>
 
   </body>
 </html>
