--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -37,9 +37,9 @@
     
     </main>
 
-    <aside id="aside"></aside>
+    <%- include('./includes/aside_closed'); %>
 
-    <footer id="footer"></footer>
+    <%- include('./includes/footer'); %>
 
   </body>
 </html>
