--- a/src/views/friendlist.ejs
+++ b/src/views/friendlist.ejs
@@ -33,9 +33,9 @@
         </section>
     </main>
 
-    <aside id="aside"></aside>
+    <%- include('./includes/aside_closed'); %>
 
-    <footer id="footer"></footer>
+    <%- include('./includes/footer'); %>
 
   </body>
 </html>
