--- a/src/views/includes/head.ejs
+++ b/src/views/includes/head.ejs
@@ -8,4 +8,6 @@
     <link rel='stylesheet' href='/stylesheets/discover.css' />
     <link rel='stylesheet' href='/stylesheets/follow.css' />
     <link rel='stylesheet' href='/stylesheets/friendlist.css' />
+    <link rel='stylesheet' href='/stylesheets/footer.css' />
+    <link rel='stylesheet' href='/stylesheets/aside.css' />
 </head>
